crates/apollo-compiler/test_data/diagnostics/0061_root_operation_with_default_undefined_query.txt
Error: cannot find type `Query` in this document
   ╭─[ 0061_root_operation_with_default_undefined_query.graphql:2:12 ]
   │
 2 │     query: Query
   │            ──┬──  
   │              ╰──── not found in this scope
───╯

